# project1_Evseenkova_Marina_M25-555

./: Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
