[project]
name = "project1-evseenkova-marina-m25-555"
version = "0.1.0"
description = "adventure labyrinth game"
authors = [
    {name = "mevseenkova",email = "m.samartseva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [

    { include = "labyrinth_game", from = "." }

]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
