[project]
name = "project1-evseenkova-marina-m25-555"
version = "0.1.0"
description = "adventure labyrinth game"
authors = [
    {name = "mevseenkova",email = "m.samartseva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [

    { include = "labyrinth_game", from = "." }

]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 
[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]
